<resources>
    <string name="app_name">Wssal Maak</string>
    <string name="connexion_avec_email_btn">Connexion avec email</string>
    <string name="inscription_tbn">Inscription</string>
    <string name="envoyez_code_btn">Envoyez Code</string>
    <string name="v_rifiez_btn">Vérifiez</string>
    <string name="suivant_btn">Suivant</string>
    <string name="confirmer_btn">Confirmer</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Prénome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_mon_profil">Mon Profil</string>
    <string name="prenome_edittxt">Votre Prénome</string>
    <string name="nome_edittxt">Votre Nome</string>
    <string name="renvoyer_le_code_tv">Renvoyer le Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="votre_email">Votre Email</string>
    <string name="votre_mote_de_passe">Votre Mote de passe</string>
    <string name="votre_num_ro_telephone">Votre numèro telephone</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="livreur">Livreur</string>
    <string name="client">Client</string>
    <string name="chat">Chat</string>
    <string name="portefeuille">Portefeuille</string>
    <string name="suivant">Suivant</string>
    <string name="nombre_des_kilos">Nombre des kilos</string>
    <string name="prix_par_kilo">Prix par kilo</string>

    <string-array name="villes">

        <item>Agadir</item>
        <item>Ain Harrouda</item>
        <item>Ait Melloul</item>
        <item>Al Hoceima</item>
        <item>Azrou</item>
        <item>Ben Guerir</item>
        <item>Beni Ansar</item>
        <item>Beni Mellal</item>
        <item>Benslimane</item>
        <item>Berkane</item>
        <item>Berrechid</item>
        <item>Bouskoura</item>
        <item>Casablanca</item>
        <item>Dar Bouazza</item>
        <item>Dcheira El Jihadia</item>
        <item>Drargua</item>
        <item>El Jadida</item>
        <item>El Kelaa Des Sraghna</item>
        <item>Errachidia</item>
        <item>Essaouira</item>
        <item>Fes</item>
        <item>Fnideq</item>
        <item>Fquih Ben Salah</item>
        <item>Guelmim</item>
        <item>Guercif</item>
        <item>Inezgane</item>
        <item>Kenitra</item>
        <item>Khemisset</item>
        <item>Khenifra</item>
        <item>Khouribga</item>
        <item>Ksar El Kebir</item>
        <item>Lahraouyine</item>
        <item>Larache</item>
        <item>Lqliaa</item>
        <item>Mdiq</item>
        <item>Marrakesh</item>
        <item>Martil</item>
        <item>Meknes</item>
        <item>Midelt</item>
        <item>Mohammedia</item>
        <item>Nador</item>
        <item>Ouarzazate</item>
        <item>Ouazzane</item>
        <item>Oued Zem</item>
        <item>Oujda</item>
        <item>Oulad Teima</item>
        <item>Rabat</item>
        <item>Safi</item>
        <item>Salé</item>
        <item>Sefrou</item>
        <item>Settat</item>
        <item>Sidi Bennour</item>
        <item>Sidi Kacem</item>
        <item>Sidi Slimane</item>
        <item>Skhirat</item>
        <item>Souk El Arbaa</item>
        <item>Suq as-Sabt Awlad an-Nama</item>
        <item>TanTan</item>
        <item>Tangier</item>
        <item>Taourirt</item>
        <item>Taroudant</item>
        <item>Taza</item>
        <item>Temara</item>
        <item>Tetouan</item>
        <item>Tifelt</item>
        <item>Tiznit</item>
        <item>Youssoufia</item>
        <item>Laayoun</item>
        <item>El Dakhla</item>
        <item>Smara</item>
        <item>Cape Bojador</item>
        <item>El Marsa</item>
        <item>Hawza</item>
        <item>Mahbes</item>
        <item>Guelta Zemmur</item>
        <item>Bir Anzarane</item>
        <item>Tichla</item>
        <item>Ausert</item>
        <item>El Argoub</item>
        <item>Bou Craa</item>
        <item>Lemseid</item>
        <item>Umm Dreiga</item>
        <item>Jdiriya</item>
        <item>Farciya</item>
        <item>Sebaiera</item>
        <item>Chalwa</item>
        <item>Aridal</item>
        <item>AsSakn</item>
        <item>Al Ga da</item>
        <item>Bir Gandus</item>
        <item>Guerguerat</item>
        <item>Amgala</item>
        <item>Bir Lehlou</item>
        <item>Tifariti</item>
        <item>Meharrize</item>
        <item>Zug</item>
        <item>Dougaj</item>
        <item>Agounit</item>
        <item>Mijek</item>
        <item>Lagouira</item>

    </string-array>

</resources>