<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_client"
            android:icon="@drawable/ic_client"
            android:title="@string/client" />
        <item
            android:id="@+id/nav_livreur"
            android:icon="@drawable/ic_car"
            android:title="@string/livreur" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_mon_profil" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/portefeuille" />

    </group>
</menu>