<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1"
        tools:context=".ui.connexionemailpassword.EmailPasswordConnexionRdFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutUserEmailInConnexion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:hint="@string/votre_email"
            app:endIconMode="clear_text"
            app:helperText="@string/votre_email"
            app:helperTextEnabled="true"
            app:layout_constraintVertical_bias=".7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserEmailInConnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutUserPasswordInConnexion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:hint="@string/votre_mote_de_passe"
            app:endIconMode="password_toggle"
            app:helperText="@string/votre_mote_de_passe"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutUserEmailInConnexion"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutUserEmailInConnexion"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutUserEmailInConnexion"
            app:layout_constraintVertical_bias=".05"
            app:startIconDrawable="@drawable/ic_passeword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserPasswordInConnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/SuivantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias=".1"
            android:text="@string/suivant_btn"
            android:background="@drawable/button_bg"
            android:textAllCaps="false"
            android:textColor="@color/blue_700"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutUserPasswordInConnexion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>