<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sizeandprice.SizeAndPriceFragment">

        <ImageView
            android:id="@+id/GoBackIconInSizeAndPriceFrag"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:scaleType="center"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".05" />

        <Button
            android:id="@+id/SuivantBtnInSizeAndPriceFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/button_bg"
            android:text="@string/suivant"

            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/NombredeskilosTvInSizeAndPriceFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/nombre_des_kilos"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toTopOf="@+id/SuivantBtnInSizeAndPriceFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutNombredeskilosInSizeAndPriceFrag"
            app:layout_constraintTop_toBottomOf="@+id/GoBackIconInSizeAndPriceFrag"
            app:layout_constraintVertical_bias=".1" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutNombredeskilosInSizeAndPriceFrag"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/nombre_des_kilos"
            app:endIconMode="clear_text"
            app:helperText="@string/nombre_des_kilos"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NombredeskilosTvInSizeAndPriceFrag"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".6"
            app:prefixTextColor="@color/blue_700"
            app:startIconDrawable="@drawable/ic_weight"
            app:suffixText="kilos ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombredeskilosInSizeAndPriceFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/PricePerkilosTvInSizeAndPriceFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prix_par_kilo"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintBottom_toTopOf="@+id/SuivantBtnInSizeAndPriceFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutPricePerkiloInSizeAndPriceFrag"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayoutPricePerkiloInSizeAndPriceFrag"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/prix_par_kilo"
            app:endIconMode="clear_text"
            app:layout_constraintVertical_bias="0"
            app:helperText="@string/prix_par_kilo"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/SuivantBtnInSizeAndPriceFrag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PricePerkilosTvInSizeAndPriceFrag"
            app:layout_constraintWidth_percent=".6"
            app:prefixTextColor="@color/blue_700"
            app:startIconDrawable="@drawable/ic_price"
            app:suffixText="dh ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPricePerkilosInSizeAndPriceFrag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="phone"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent=".5"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/yellow_200"
            app:layout_constraintBottom_toTopOf="@+id/SuivantBtnInSizeAndPriceFrag"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayoutNombredeskilosInSizeAndPriceFrag"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayoutNombredeskilosInSizeAndPriceFrag"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayoutNombredeskilosInSizeAndPriceFrag"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>